--- a/.metamaskrc.dist
+++ b/.metamaskrc.dist
@@ -1,3 +1,4 @@
 ; Extra environment variables
 INFURA_PROJECT_ID=00000000000
-SEGMENT_WRITE_KEY=
+SEGMENT_WRITE_KEY=00000000001
+HCAPTCHA_SITE_KEY=00000000003
