fix override config to permit babelify and brfs to module-deps

--- a/lavamoat-config-override.json
+++ b/lavamoat-config-override.json
@@ -71,7 +71,9 @@
     },
     "module-deps": {
       "packages": {
-        "loose-envify": true
+        "loose-envify": true,
+        "babelify": true,
+        "brfs": true
       }
     },
     "@babel/core": {
