revert debug change and fx requires in buildsys

--- a/lavamoat-config-override.json
+++ b/lavamoat-config-override.json
@@ -71,9 +71,7 @@
     },
     "module-deps": {
       "packages": {
-        "loose-envify": true,
-        "babelify": true,
-        "brfs": true
+        "loose-envify": true
       }
     },
     "@babel/core": {
