--- a/package.json
+++ b/package.json
@@ -304,7 +304,24 @@
     "weak": true,
     "chromedriver": true,
     "geckodriver": true,
-    "@sentry/cli": true
+    "@sentry/cli": true,
+    "core-js": false,
+    "core-js-pure": false,
+    "fsevents": false,
+    "keccak": false,
+    "secp256k1": false,
+    "sha3": false,
+    "bufferutil": false,
+    "utf-8-validate": false,
+    "web3": false,
+    "electron": false,
+    "ejs": false,
+    "sc-uws": false,
+    "sqlite3": false,
+    "leveldown": false,
+    "ursa-optional": false,
+    "tiny-secp256k1": false,
+    "gc-stats": false
   },
   "engines": {
     "node": "^10.18.1",
