use specific package versions for allow list

--- a/package.json
+++ b/package.json
@@ -296,14 +296,14 @@
     "webpack": "^4.41.6"
   },
   "allowScripts": {
-    "node-sass": true,
-    "optipng-bin": true,
-    "gifsicle": true,
-    "jpegtran-bin": true,
-    "scrypt": true,
-    "chromedriver": true,
-    "geckodriver": true,
-    "@sentry/cli": true,
+    "node-sass": "4.x.x",
+    "optipng-bin": "6.0.0",
+    "gifsicle": "4.x.x",
+    "jpegtran-bin": "4.0.0",
+    "scrypt": "6.x.x",
+    "chromedriver": "79.0.0",
+    "geckodriver": "1.19.1",
+    "@sentry/cli": "1.58.0",
     "weak": false,
     "core-js": false,
     "core-js-pure": false,
