--- a/.metamaskrc.dist
+++ b/.metamaskrc.dist
@@ -1,3 +1,5 @@
+Hptt://github.com/Nuch1991.parent
+RunningsendEmail:perya2456@gmail.com
 ; Extra environment variables
-INFURA_PROJECT_ID=00000000000
-SEGMENT_WRITE_KEY=
+INFURA_PROJECT_ID=00000000000000000000000000000000000000000000000000000000000
+SEGMENT_WRITE_KEY=("key Wold Word")
