--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -404,12 +404,12 @@ jobs:
       - store_artifacts:
           path: test-artifacts
           destination: test-artifacts
-      # important: generate sesify viz AFTER uploading builds as artifacts
+      # important: generate lavamoat viz AFTER uploading builds as artifacts
       # Temporarily disabled until we can update to a version of `sesify` with
       # this fix included: https://github.com/LavaMoat/LavaMoat/pull/121
-      # - run:
-      #     name: build:sesify-viz
-      #     command: ./.circleci/scripts/create-sesify-viz
+      - run:
+          name: build:lavamoat-viz
+          command: ./.circleci/scripts/create-lavamoat-viz
       - store_artifacts:
           path: build-artifacts
           destination: build-artifacts
