--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "fast-json-patch": "^2.0.4",
     "fuse.js": "^3.2.0",
     "globalthis": "^1.0.1",
+    "hdkey": "^2.0.1",
     "human-standard-token-abi": "^2.0.0",
     "json-rpc-engine": "^6.1.0",
     "json-rpc-middleware-stream": "^2.1.1",
@@ -266,7 +267,7 @@
     "proxyquire": "^2.1.3",
     "randomcolor": "^0.5.4",
     "rc": "^1.2.8",
-    "react-devtools": "^4.8.0",
+    "react-devtools": "^4.10.1",
     "react-test-renderer": "^16.12.0",
     "read-installed": "^4.0.3",
     "redux-mock-store": "^1.5.4",
