--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
     "safe-json-stringify": "^1.2.0",
     "single-call-balance-checker-abi": "^1.0.0",
     "swappable-obj-proxy": "^1.1.0",
+    "trezor-connect": "^8.1.19-extended",
     "textarea-caret": "^3.0.1",
     "valid-url": "^1.0.9",
     "web3": "^0.20.7",
