--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "react-idle-timer": "^4.2.5",
     "react-inspector": "^2.3.0",
     "react-popper": "^2.2.3",
+    "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-select": "^1.0.0",
