add new lavamoat deps

--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "json-rpc-engine": "^6.1.0",
     "json-rpc-middleware-stream": "^2.1.1",
     "jsonschema": "^1.2.4",
+    "lavamoat-browserify": "12.0.0",
     "localforage": "^1.9.0",
     "lodash": "^4.17.19",
     "loglevel": "^1.4.1",
@@ -257,7 +258,7 @@
     "gulp-zip": "^4.0.0",
     "jsdom": "^11.2.0",
     "koa": "^2.7.0",
-    "lavamoat": "^4.3.4",
+    "lavamoat": "4.4.0",
     "lavamoat-viz": "^5.0.2",
     "lockfile-lint": "^4.0.0",
     "loose-envify": "^1.4.0",
