feat: ui level new base32 address, WIP

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "cfx-wallet": ">=0.0.4",
     "cfxjs-format": "^0.0.4",
     "classnames": "^2.2.6",
+    "conflux-address-js": "yqrashawn/conflux-address-js#main",
     "content-hash": "^2.5.0",
     "copy-to-clipboard": "^3.0.8",
     "currency-formatter": "^1.4.2",
@@ -200,7 +201,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.5.5",
-    "@cfxjs/fullnode": "^1.5.0",
+    "@cfxjs/fullnode": "^1.6.1",
     "@metamask/eslint-config": "^1.1.0",
     "@metamask/forwarder": "^1.1.0",
     "@sentry/cli": "^1.49.0",
