allow-scripts - use @lavamoat/allow-scripts

--- a/package.json
+++ b/package.json
@@ -190,6 +190,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.5.5",
+    "@lavamoat/allow-scripts": "^1.0.0",
     "@metamask/eslint-config": "^4.1.0",
     "@metamask/forwarder": "^1.1.0",
     "@metamask/test-dapp": "^4.0.1",
@@ -204,7 +205,6 @@
     "@testing-library/react-hooks": "^3.2.1",
     "@types/react": "^16.9.53",
     "addons-linter": "1.14.0",
-    "allow-scripts": "^1.5.3",
     "babel-loader": "^8.0.6",
     "babelify": "^10.0.0",
     "brfs": "^2.0.2",
@@ -295,36 +295,37 @@
     "watchify": "^3.11.1",
     "webpack": "^4.41.6"
   },
-  "allowScripts": {
-    "node-sass": "4.x.x",
-    "optipng-bin": "6.0.0",
-    "gifsicle": "4.x.x",
-    "jpegtran-bin": "4.0.0",
-    "scrypt": "6.x.x",
-    "chromedriver": "79.0.0",
-    "geckodriver": "1.19.1",
-    "@sentry/cli": "1.58.0",
-    "weak": false,
-    "core-js": false,
-    "core-js-pure": false,
-    "fsevents": false,
-    "keccak": false,
-    "secp256k1": false,
-    "sha3": false,
-    "bufferutil": false,
-    "utf-8-validate": false,
-    "web3": false,
-    "electron": false,
-    "ejs": false,
-    "sc-uws": false,
-    "sqlite3": false,
-    "leveldown": false,
-    "ursa-optional": false,
-    "tiny-secp256k1": false,
-    "gc-stats": false
-  },
   "engines": {
     "node": "^10.18.1",
     "yarn": "^1.16.0"
+  },
+  "lavamoat": {
+    "allowScripts": {
+      "node-sass": true,
+      "optipng-bin": true,
+      "gifsicle": true,
+      "jpegtran-bin": true,
+      "scrypt": false,
+      "chromedriver": true,
+      "geckodriver": true,
+      "@sentry/cli": true,
+      "core-js": false,
+      "core-js-pure": false,
+      "keccak": false,
+      "secp256k1": false,
+      "web3": false,
+      "sha3": false,
+      "bufferutil": false,
+      "utf-8-validate": false,
+      "electron": false,
+      "ejs": false,
+      "sc-uws": false,
+      "sqlite3": false,
+      "leveldown": false,
+      "ursa-optional": false,
+      "gc-stats": false,
+      "github:assemblyscript/assemblyscript": false,
+      "tiny-secp256k1": false
+    }
   }
 }
