feat: new @cfx/fullnode version

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "watch:test:unit": "nodemon --exec \"yarn test:unit\" ./test ./app ./ui",
     "format:js": "prettier-eslint ./{app,ui,test,development}/**/*.{js,json} --write",
     "sendwithprivatedapp": "node development/static-server.js test/e2e/send-eth-with-private-key-test --port 8080",
-    "test:unit": "yarn test:prepare-conflux-local && mocha --timeout 10000 --exit --require test/env.js --file test/setup.js --recursive \"test/unit/**/*.js\" \"ui/app/**/*.test.js\"",
+    "test:unit": "yarn test:prepare-conflux-local && mocha --timeout 150000 --exit --require test/env.js --file test/setup.js --recursive \"test/unit/**/*.js\" \"ui/app/**/*.test.js\"",
+    "test:unit:local-machine": "mocha --timeout 150000 --exit --require test/env.js --file test/setup.js --recursive \"test/unit/**/*.js\" \"ui/app/**/*.test.js\"",
     "test:unit:global": "yarn test:prepare-conflux-local && mocha --timeout 6000 --exit --require test/env.js --file test/setup.js --recursive mocha test/unit-global/*",
     "test:single": "mocha --exit --no-timeouts --require test/env.js --file test/setup.js",
     "test:integration": "yarn test:integration:build && yarn test:flat",
@@ -201,7 +202,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.5.5",
-    "@cfxjs/fullnode": "^1.6.1",
+    "@cfxjs/fullnode": "^1.6.3",
     "@metamask/eslint-config": "^1.1.0",
     "@metamask/forwarder": "^1.1.0",
     "@sentry/cli": "^1.49.0",
