--- a/package.json
+++ b/package.json
@@ -64,11 +64,12 @@
     "update-changelog": "./development/auto-changelog.sh",
     "generate:migration": "./development/generate-migration.sh"
   },
+  "browserify-browser": {
+    "secp256k1": "secp256k1/elliptic",
+    "./node-modules/js-conflux-sdk/src/util/jsbi": "jsbi"
+  },
   "lint-staged": {
-    "*.{js,json}": [
-      "prettier-eslint --write",
-      "eslint --fix"
-    ]
+    "*.{js,json}": ["prettier-eslint --write", "eslint --fix"]
   },
   "prettier": {
     "semi": false,
@@ -94,7 +95,7 @@
     "@sentry/browser": "^5.27.4",
     "@sentry/integrations": "^5.27.4",
     "@yqrashawn/cfx-contract-metadata": "^0.0.7",
-    "@yqrashawn/cfx-json-rpc-middleware": "^4.4.8",
+    "@yqrashawn/cfx-json-rpc-middleware": "^1.0.1",
     "@yqrashawn/conflux-portal-inpage-provider": "^4.0.10",
     "@zxing/library": "^0.8.0",
     "abi-decoder": "^1.2.0",
@@ -104,14 +105,14 @@
     "bip39": "^2.2.0",
     "bn.js": "^4.11.7",
     "c3": "^0.7.10",
-    "cfx-keyring-controller": ">=5.6.10",
+    "cfx-keyring-controller": ">=5.7.2",
     "cfx-phishing-detect": ">=0.0.1",
-    "cfx-sig-util": ">=2.0.3",
-    "cfx-util": ">=0.0.3",
-    "cfx-wallet": ">=0.0.4",
-    "cfxjs-format": "^0.0.4",
+    "cfx-sig-util": ">=2.1.1",
+    "cfx-util": ">=0.0.4",
+    "cfx-wallet": ">=0.0.5",
+    "cfxjs-format": "^1.0.2",
     "classnames": "^2.2.6",
-    "conflux-address-js": "yqrashawn/conflux-address-js#f095d5ae409daf1e06a00ee2187d9b0f84be8448",
+    "conflux-address-js": "^1.0.4",
     "content-hash": "^2.5.0",
     "copy-to-clipboard": "^3.0.8",
     "currency-formatter": "^1.4.2",
@@ -128,7 +129,6 @@
     "eth-query": "^2.1.2",
     "eth-token-tracker": "^1.1.11",
     "eth-trezor-keyring": "^0.4.0",
-    "ethereumjs-abi": "^0.6.4",
     "ethereumjs-tx": "1.3.7",
     "ethjs": "^0.4.0",
     "ethjs-contract": "^0.2.3",
@@ -141,7 +141,7 @@
     "gaba": "^1.10.0",
     "human-standard-token-abi": "^2.0.0",
     "jazzicon": "^2.0.0",
-    "js-conflux-sdk": "^1.1.6",
+    "js-conflux-sdk": "^1.5.8",
     "json-rpc-engine": "^5.1.6",
     "json-rpc-middleware-stream": "^2.1.1",
     "jsonschema": "^1.2.5",
@@ -202,7 +202,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.5.5",
-    "@cfxjs/fullnode": "^1.6.3",
+    "@cfxjs/fullnode": "^1.7.0",
     "@metamask/eslint-config": "^1.1.0",
     "@metamask/forwarder": "^1.1.0",
     "@sentry/cli": "^1.49.0",
@@ -262,6 +262,7 @@
     "gulp-watch": "^5.0.1",
     "gulp-zip": "^4.0.0",
     "husky": ">=1",
+    "jsbi": "^3.1.4",
     "jsdom": "^11.2.0",
     "jsdom-global": "^3.0.2",
     "karma": "^4.1.0",
