--- a/lavamoat-config.json
+++ b/lavamoat-config.json
@@ -944,7 +944,8 @@
       },
       "packages": {
         "micromatch": true,
-        "normalize-path": true
+        "normalize-path": true,
+        "picomatch": true
       }
     },
     "append-buffer": {
@@ -956,16 +957,6 @@
       },
       "packages": {
         "buffer-equal": true
-      }
-    },
-    "are-we-there-yet": {
-      "builtin": {
-        "events.EventEmitter": true,
-        "util.inherits": true
-      },
-      "packages": {
-        "delegates": true,
-        "readable-stream": true
       }
     },
     "arr-diff": {
@@ -1297,10 +1288,13 @@
         "path.basename": true,
         "path.dirname": true,
         "path.extname": true,
+        "path.isAbsolute": true,
         "path.join": true,
+        "path.normalize": true,
         "path.relative": true,
         "path.resolve": true,
-        "path.sep": true
+        "path.sep": true,
+        "util.promisify": true
       },
       "globals": {
         "clearTimeout": true,
@@ -1310,13 +1304,13 @@
         "process.env.CHOKIDAR_USEPOLLING": true,
         "process.nextTick": true,
         "process.platform": true,
+        "process.version.match": true,
         "setTimeout": true
       },
       "packages": {
         "anymatch": true,
         "async-each": true,
         "braces": true,
-        "fsevents": true,
         "glob-parent": true,
         "inherits": true,
         "is-binary-path": true,
@@ -1431,11 +1425,6 @@
     "core-js-compat": {
       "packages": {
         "semver": true
-      }
-    },
-    "core-util-is": {
-      "globals": {
-        "Buffer.isBuffer": true
       }
     },
     "cosmiconfig": {
@@ -1566,16 +1555,6 @@
       "packages": {
         "shasum": true,
         "through2": true
-      }
-    },
-    "detect-libc": {
-      "builtin": {
-        "child_process.spawnSync": true,
-        "fs.readdirSync": true,
-        "os.platform": true
-      },
-      "globals": {
-        "process.env": true
       }
     },
     "detective": {
@@ -2024,44 +2003,6 @@
         "process.version": true
       }
     },
-    "fsevents": {
-      "builtin": {
-        "events.EventEmitter": true,
-        "fs.stat": true,
-        "path.join": true,
-        "util.inherits": true
-      },
-      "globals": {
-        "__dirname": true,
-        "process.nextTick": true,
-        "process.platform": true,
-        "setImmediate": true
-      },
-      "packages": {
-        "node-pre-gyp": true
-      }
-    },
-    "gauge": {
-      "builtin": {
-        "util.format": true
-      },
-      "globals": {
-        "clearInterval": true,
-        "process": true,
-        "setImmediate": true,
-        "setInterval": true
-      },
-      "packages": {
-        "aproba": true,
-        "console-control-strings": true,
-        "has-unicode": true,
-        "object-assign": true,
-        "signal-exit": true,
-        "string-width": true,
-        "strip-ansi": true,
-        "wide-align": true
-      }
-    },
     "get-assigned-identifiers": {
       "builtin": {
         "assert.equal": true
@@ -2318,7 +2259,7 @@
       },
       "packages": {
         "chalk": true,
-        "lodash.clonedeep": true,
+        "lodash": true,
         "node-sass": true,
         "plugin-error": true,
         "replace-ext": true,
@@ -2442,16 +2383,6 @@
     "has-flag": {
       "globals": {
         "process.argv": true
-      }
-    },
-    "has-unicode": {
-      "builtin": {
-        "os.type": true
-      },
-      "globals": {
-        "process.env.LANG": true,
-        "process.env.LC_ALL": true,
-        "process.env.LC_CTYPE": true
       }
     },
     "has-value": {
@@ -2605,11 +2536,6 @@
     "is-extendable": {
       "packages": {
         "is-plain-object": true
-      }
-    },
-    "is-fullwidth-code-point": {
-      "packages": {
-        "number-is-nan": true
       }
     },
     "is-glob": {
@@ -2997,38 +2923,6 @@
         "setTimeout": true
       }
     },
-    "node-pre-gyp": {
-      "builtin": {
-        "events.EventEmitter": true,
-        "fs.existsSync": true,
-        "fs.readFileSync": true,
-        "fs.renameSync": true,
-        "path.dirname": true,
-        "path.existsSync": true,
-        "path.join": true,
-        "path.resolve": true,
-        "url.parse": true,
-        "url.resolve": true,
-        "util.inherits": true
-      },
-      "globals": {
-        "__dirname": true,
-        "console.log": true,
-        "process.arch": true,
-        "process.cwd": true,
-        "process.env": true,
-        "process.platform": true,
-        "process.version.substr": true,
-        "process.versions": true
-      },
-      "packages": {
-        "detect-libc": true,
-        "nopt": true,
-        "npmlog": true,
-        "rimraf": true,
-        "semver": true
-      }
-    },
     "node-sass": {
       "builtin": {
         "fs.existsSync": true,
@@ -3068,24 +2962,6 @@
         "true-case-path": true
       }
     },
-    "nopt": {
-      "builtin": {
-        "path": true,
-        "stream.Stream": true,
-        "url": true
-      },
-      "globals": {
-        "console": true,
-        "process.argv": true,
-        "process.env.DEBUG_NOPT": true,
-        "process.env.NOPT_DEBUG": true,
-        "process.platform": true
-      },
-      "packages": {
-        "abbrev": true,
-        "osenv": true
-      }
-    },
     "normalize-path": {
       "packages": {
         "remove-trailing-separator": true
@@ -3099,22 +2975,6 @@
     "now-and-later": {
       "packages": {
         "once": true
-      }
-    },
-    "npmlog": {
-      "builtin": {
-        "events.EventEmitter": true,
-        "util": true
-      },
-      "globals": {
-        "process.nextTick": true,
-        "process.stderr": true
-      },
-      "packages": {
-        "are-we-there-yet": true,
-        "console-control-strings": true,
-        "gauge": true,
-        "set-blocking": true
       }
     },
     "object-copy": {
@@ -3182,54 +3042,6 @@
       },
       "packages": {
         "readable-stream": true
-      }
-    },
-    "os-homedir": {
-      "builtin": {
-        "os.homedir": true
-      },
-      "globals": {
-        "process.env": true,
-        "process.getuid": true,
-        "process.platform": true
-      }
-    },
-    "os-tmpdir": {
-      "globals": {
-        "process.env.SystemRoot": true,
-        "process.env.TEMP": true,
-        "process.env.TMP": true,
-        "process.env.TMPDIR": true,
-        "process.env.windir": true,
-        "process.platform": true
-      }
-    },
-    "osenv": {
-      "builtin": {
-        "child_process.exec": true,
-        "path": true
-      },
-      "globals": {
-        "process.env.COMPUTERNAME": true,
-        "process.env.ComSpec": true,
-        "process.env.EDITOR": true,
-        "process.env.HOSTNAME": true,
-        "process.env.PATH": true,
-        "process.env.PROMPT": true,
-        "process.env.PS1": true,
-        "process.env.Path": true,
-        "process.env.SHELL": true,
-        "process.env.USER": true,
-        "process.env.USERDOMAIN": true,
-        "process.env.USERNAME": true,
-        "process.env.VISUAL": true,
-        "process.env.path": true,
-        "process.nextTick": true,
-        "process.platform": true
-      },
-      "packages": {
-        "os-homedir": true,
-        "os-tmpdir": true
       }
     },
     "parent-module": {
@@ -3533,7 +3345,6 @@
         "setImmediate": true
       },
       "packages": {
-        "core-util-is": true,
         "inherits": true,
         "isarray": true,
         "process-nextick-args": true,
@@ -3544,16 +3355,23 @@
     },
     "readdirp": {
       "builtin": {
+        "fs": true,
         "path.join": true,
         "path.relative": true,
-        "util.inherits": true
+        "path.resolve": true,
+        "path.sep": true,
+        "stream.Readable": true,
+        "util.inherits": true,
+        "util.promisify": true
       },
       "globals": {
+        "process.platform": true,
         "setImmediate": true
       },
       "packages": {
         "graceful-fs": true,
         "micromatch": true,
+        "picomatch": true,
         "readable-stream": true
       }
     },
@@ -3753,6 +3571,37 @@
         "ret": true
       }
     },
+    "sass": {
+      "builtin": {
+        "fs": true,
+        "readline": true
+      },
+      "globals": {
+        "HTMLElement": true,
+        "InternalError": true,
+        "TextDecoder": true,
+        "WorkerGlobalScope": true,
+        "__dirname": true,
+        "__filename": true,
+        "__non_webpack_require__": true,
+        "__webpack_require__": true,
+        "console": true,
+        "dartExperimentalFixupGetTag": true,
+        "dartMainRunner": true,
+        "dartNativeDispatchHooksTransformer": true,
+        "dartPrint": true,
+        "document": true,
+        "load": true,
+        "navigator": true,
+        "print": true,
+        "process": true,
+        "setTimeout": true,
+        "version": true
+      },
+      "packages": {
+        "chokidar": true
+      }
+    },
     "scope-analyzer": {
       "builtin": {
         "assert.ok": true,
@@ -3772,12 +3621,6 @@
       "globals": {
         "console": true,
         "process": true
-      }
-    },
-    "set-blocking": {
-      "globals": {
-        "process.stderr": true,
-        "process.stdout": true
       }
     },
     "set-value": {
@@ -3973,7 +3816,6 @@
     },
     "string-width": {
       "packages": {
-        "code-point-at": true,
         "emoji-regex": true,
         "is-fullwidth-code-point": true,
         "strip-ansi": true
@@ -4540,11 +4382,6 @@
       },
       "packages": {
         "isexe": true
-      }
-    },
-    "wide-align": {
-      "packages": {
-        "string-width": true
       }
     },
     "write": {
