fix: reduce ui.js size

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "generate:migration": "./development/generate-migration.sh"
   },
   "browserify-browser": {
+    "js-conflux-sdk": "./node-modules/js-conflux-sdk/src/index.js",
     "secp256k1": "secp256k1/elliptic",
     "./node-modules/js-conflux-sdk/src/util/jsbi": "jsbi"
   },
@@ -92,14 +93,14 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@cfxjs/abi": "^0.0.1",
+    "@cfxjs/abi": "^0.0.2",
     "@download/blockies": "^1.0.3",
     "@material-ui/core": "1.0.0",
     "@metamask/eth-ledger-bridge-keyring": "^0.2.6",
     "@sentry/browser": "^5.27.4",
     "@sentry/integrations": "^5.27.4",
     "@yqrashawn/cfx-contract-metadata": "^0.0.7",
-    "@yqrashawn/cfx-json-rpc-middleware": "^1.0.1",
+    "@yqrashawn/cfx-json-rpc-middleware": "^1.0.2",
     "@yqrashawn/conflux-portal-inpage-provider": "^4.0.10",
     "@zxing/library": "^0.8.0",
     "abi-decoder": "^1.2.0",
@@ -108,19 +109,17 @@
     "bignumber.js": "^4.1.0",
     "bip39": "^2.2.0",
     "bn.js": "^4.11.7",
-    "c3": "^0.7.10",
-    "cfx-keyring-controller": ">=5.7.2",
+    "cfx-keyring-controller": ">=5.7.3",
     "cfx-phishing-detect": ">=0.0.1",
-    "cfx-sig-util": ">=2.1.1",
+    "cfx-sig-util": ">=2.1.2",
     "cfx-util": ">=0.0.4",
     "cfx-wallet": ">=0.0.5",
-    "cfxjs-format": "^1.0.2",
+    "cfxjs-format": "^1.0.3",
     "classnames": "^2.2.6",
     "conflux-address-js": "^1.0.4",
     "content-hash": "^2.5.0",
     "copy-to-clipboard": "^3.0.8",
     "currency-formatter": "^1.4.2",
-    "d3": "^5.15.0",
     "debounce-stream": "^2.0.0",
     "deep-freeze-strict": "1.1.1",
     "dnode": "^1.2.2",
@@ -145,7 +144,7 @@
     "gaba": "^1.10.0",
     "human-standard-token-abi": "^2.0.0",
     "jazzicon": "^2.0.0",
-    "js-conflux-sdk": "^1.5.8",
+    "js-conflux-sdk": "^1.5.9",
     "json-rpc-engine": "^5.1.6",
     "json-rpc-middleware-stream": "^2.1.1",
     "jsonschema": "^1.2.5",
@@ -262,7 +261,7 @@
     "gulp-sass": "^4.0.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-stylelint": "^7.0.0",
-    "gulp-terser-js": "^5.0.0",
+    "gulp-terser-js": "^5.2.2",
     "gulp-watch": "^5.0.1",
     "gulp-zip": "^4.0.0",
     "husky": ">=1",
