allow-scripts - add missing package to denylist

--- a/package.json
+++ b/package.json
@@ -323,7 +323,8 @@
       "ursa-optional": false,
       "gc-stats": false,
       "github:assemblyscript/assemblyscript": false,
-      "tiny-secp256k1": false
+      "tiny-secp256k1": false,
+      "@lavamoat/preinstall-always-fail": false
     }
   }
 }
