lavamoat/allow-scripts - add missing policy entry

--- a/package.json
+++ b/package.json
@@ -332,7 +332,8 @@
       "github:assemblyscript/assemblyscript": false,
       "tiny-secp256k1": false,
       "@lavamoat/preinstall-always-fail": false,
-      "fsevents": false
+      "fsevents": false,
+      "metamask-crx": false
     }
   }
 }
