--- a/package.json
+++ b/package.json
@@ -261,7 +261,7 @@
     "jsdom": "^11.2.0",
     "koa": "^2.7.0",
     "lavamoat": "^5.1.3",
-    "lavamoat-viz": "^6.0.1",
+    "lavamoat-viz": "https://github.com/lavamoat/lavamoat/raw/imports/packages/viz/lavamoat-viz-6.0.2.tgz",
     "lockfile-lint": "^4.0.0",
     "loose-envify": "^1.4.0",
     "mocha": "^7.2.0",
