--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,7 +92,7 @@ workflows:
             - prep-build
             - prep-build-storybook
             - benchmark
-            - all-tests-pass
+            # - all-tests-pass
       # - job-publish-release:
       #     filters:
       #       branches:
