--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,15 +83,15 @@ workflows:
       #       - test-e2e-firefox
       #       - test-e2e-chrome-metrics
       #       - test-e2e-firefox-metrics
-      - benchmark:
-          requires:
-            - prep-build-test
+      # - benchmark:
+      #     requires:
+      #       - prep-build-test
       - job-publish-prerelease:
           requires:
             - prep-deps
             - prep-build
             - prep-build-storybook
-            - benchmark
+            # - benchmark
             # - all-tests-pass
       # - job-publish-release:
       #     filters:
