--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ workflows:
       #         only:
       #           - /^Version-v(\d+)[.](\d+)[.](\d+)/
       - prep-deps
-      # - test-deps
+      - test-deps
       # - prep-build:
       #     requires:
       #       - prep-deps
